# serializer version: 1
# name: test_cyclic_zeros_folds_to_rational_tree[cyclic_zeros]
  '(λ (λ ((v1 (λ (λ v0))) #0=(λ (λ ((v1 (λ (λ v0))) #0))))))'
# ---
# name: test_finite_list_readout[finite_list]
  '(λ (λ ((v1 (λ (λ v0))) (λ (λ v0)))))'
# ---
# name: test_identity_readout[identity]
  '(λ v0)'
# ---
# name: test_kestrel_readout[kestrel]
  '(λ (λ v1))'
# ---
